README.md and README.html for submission

--- a/README.html
+++ b/README.html
@@ -176,7 +176,7 @@
 <h6 id="notes">Notes</h6>
 <ul>
 <li>The HDF5 file consists of <code>(npx * nbx) * (npy * nby) * (npz * nbz)</code> cubic blocks.</li>
-<li>Each MPI process has a local subgrid of <code>nbx * nby * nbz)</code> blocks.</li>
+<li>Each MPI process has a local subgrid of <code>nbx * nby * nbz</code> blocks.</li>
 <li>For the default compilation options each cubic block contains 32^3 floats.</li>
 <li>The total number of processes specified for the Cartesian grid (<code>npx * npy * npz</code>) must be equal to the number of processes created by the <code>mpirun</code> launcher.</li>
 </ul>
