updated files.  Now synced with what has been submitted to CPC

--- a/README.html
+++ b/README.html
@@ -265,6 +265,12 @@ RES:       256.23 8.722263e-04 8.271610e-05 3.972721e-05 1.046102e-04 3.611734e-
 <ul>
 <li>Execute the script <code>run_all.sh</code> in the <code>CubismZ/Tests/Test1_cav</code> and <code>CubismZ/Tests/Test2_cav</code> directories, following the steps for the demo tests.</li>
 </ul>
+<h2 id="cavitation-data">Cavitation Data</h2>
+<p>The HDF5 data that has been used (and directly included) for the CPC submission can be downloaded from polybox:</p>
+<p><a href="https://polybox.ethz.ch/index.php/s/di7qQoWc6eAhCXk/download" title="https://polybox.ethz.ch/index.php/s/di7qQoWc6eAhCXk/download">data_005000.tar.xz</a></p>
+<h2 id="cpc-submission">CPC Submission</h2>
+<p>The snapshot based on the gitlab.ethz.ch <code>cpc</code> branch that has been submitted to the CPC Journal can be downloaded from polybox:</p>
+<p><a href="https://polybox.ethz.ch/index.php/s/0aJdJLYNY24XdwR/download" title="https://polybox.ethz.ch/index.php/s/0aJdJLYNY24XdwR/download">CPC submission snapshot</a></p>
 <!---->
 </body>
 </html>
